--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ nav .fa-solid {
 
 @media only screen and (max-width: 600px) {
     #header {
-        background: #070508;
+        background-image: url(images/background.jpg);
     }
 
     .header-text {
